--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,6 +1,7 @@
 @import "header.css";
 @import "footer.css";
 @import "bootstrap-icons/font/bootstrap-icons.css";
+@import "landing.css";
 
 * {
   box-sizing: border-box;
@@ -146,82 +147,6 @@ body {
 .main-content section {
   padding-bottom: 5%;
 }
-
-/* Carousel */
-#carouselExampleCaptions {
-  max-height: 90vh;
-  height: 90vh;
-  width: 100%;
-}
-
-#carouselExampleCaptions .carousel-inner,
-.carousel-item {
-  height: 100%;
-}
-
-.carousel-caption {
-  background-color: rgba(0, 0, 0, 0.5);
-}
-
-.carousel-item .full-image {
-  object-fit: cover;
-  height: 100%;
-  width: 100%;
-}
-
-.landing {
-  height: 100%;
-  width: 100%;
-  position: absolute;
-  display: block !important;
-  bottom: 0;
-  /*background-color: #202027;*/
-
-  padding: 0 10%;
-  text-align: left;
-  color: var(--text-default);
-
-  display: grid;
-  place-content: center;
-  align-content: center;
-}
-
-.landing img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  display: block;
-  border-radius: 20%;
-}
-
-.landing-content {
-  max-width: 90% !important;
-  justify-self: center;
-  justify-content: space-around;
-}
-
-.landing-content h1 {
-  /*color: var(--secondary);*/
-  background-image: linear-gradient(90deg, #6233cf, #a01e5b, #6233cf, #a01e5b);
-
-  color: transparent;
-  background-clip: text;
-  background-size: 300%;
-  animation: gradient-shift 2.5s infinite linear,
-    blink-caret 0.8s step-end infinite !important;
-  --webkit-background-clip: text;
-  padding: 0.5rem 0;
-}
-@keyframes gradient-shift {
-  0% {
-    background-position: 0% 50%;
-  }
-  100% {
-    background-position: 100% 50%;
-  }
-}
-
-/* Carousel end */
 
 .skills-wrapper {
   display: flex;
